attempt to fix the extra space appearing on bottom of mobile screen

--- a/style.css
+++ b/style.css
@@ -2,6 +2,11 @@
   font-size: 10px;
 }
 
+body, html { 
+  overflow-x: hidden; 
+  overflow-y: auto;
+}
+
 
 .card {
   width: 100% !important;
